--- a/public/css/index.css
+++ b/public/css/index.css
@@ -3,3 +3,11 @@ body {
     margin: 0;
     overflow: hidden;
 }
+
+.ui-overlay {
+    width: 100%;
+    height: 100%;
+    position: absolute;
+    top: 0;
+    left: 0;
+}
